// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lead one and one slice 1`] = `
<View>
  <View
    style={
      Object {
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 1,
        "borderStyle": "solid",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <View>
        <View>
          <Text
            accessibilityRole="heading"
            accessible={true}
            allowFontScaling={true}
            aria-level="3"
            className=""
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#333333",
                  "fontFamily": "TimesModern-Bold",
                  "fontWeight": "400",
                  "marginBottom": 5,
                },
                Object {
                  "fontFamily": "TimesModern-Bold",
                  "fontSize": 22,
                  "lineHeight": 27,
                },
                Object {},
              ]
            }
          >
            Prince Philip ‘could be prosecuted’ over car crash
          </Text>
        </View>
        <View
          style={
            Object {
              "backgroundColor": "blue",
              "marginBottom": 10,
              "width": "100%",
            }
          }
        >
          <View
            aspectRatio={1.7777777777777777}
            style={Object {}}
          >
            <View
              onLayout={[Function]}
              style={
                Array [
                  Object {
                    "flex": 1,
                  },
                  null,
                ]
              }
            >
              <View
                onLayout={[Function]}
                style={
                  Array [
                    Object {
                      "flex": 1,
                    },
                    Object {
                      "flex": 1,
                    },
                  ]
                }
              >
                <ARTSurfaceView
                  style={
                    Array [
                      Object {
                        "bottom": 0,
                        "left": 0,
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                      },
                      Object {
                        "height": 0,
                        "width": 0,
                      },
                    ]
                  }
                >
                  <ARTShape
                    d={
                      Array [
                        2,
                        0,
                        0,
                        2,
                        0,
                        0,
                        2,
                        0,
                        0,
                        2,
                        0,
                        0,
                      ]
                    }
                    fill={
                      Array [
                        1,
                        0,
                        0,
                        -0,
                        0,
                        0.9764705882352941,
                        0.9764705882352941,
                        0.9764705882352941,
                        1,
                        0.9294117647058824,
                        0.9294117647058824,
                        0.9294117647058824,
                        1,
                        0,
                        1,
                      ]
                    }
                    opacity={1}
                    stroke={null}
                    strokeCap={1}
                    strokeDash={null}
                    strokeJoin={1}
                    strokeWidth={1}
                    transform={
                      Array [
                        1,
                        0,
                        0,
                        1,
                        0,
                        0,
                      ]
                    }
                  />
                </ARTSurfaceView>
              </View>
            </View>
            <Image
              onLoad={[Function]}
              source={
                Object {
                  "uri": "https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F8c1333a8-1aa2-11e9-944c-54b267eb465b.jpg?crop=1556%2C875%2C189%2C119&resize=1440",
                }
              }
              style={
                Object {
                  "height": "100%",
                  "position": "absolute",
                  "width": "100%",
                  "zIndex": 1,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 1,
        "borderStyle": "solid",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <View>
        <View>
          <Text
            accessibilityRole="heading"
            accessible={true}
            allowFontScaling={true}
            aria-level="3"
            className=""
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#333333",
                  "fontFamily": "TimesModern-Bold",
                  "fontWeight": "400",
                  "marginBottom": 5,
                },
                Object {
                  "fontFamily": "TimesModern-Bold",
                  "fontSize": 22,
                  "lineHeight": 27,
                },
                Object {},
              ]
            }
          >
            GCHQ gives girls free cyber-classes to tackle gender gap
          </Text>
        </View>
        <Text
          accessible={true}
          allowFontScaling={true}
          className=""
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#696969",
              "flexWrap": "wrap",
              "fontFamily": "TimesDigitalW04",
              "fontSize": 14,
              "lineHeight": 20,
              "marginBottom": 10,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
          >
            
            GCHQ will give free cyber-classes to hundreds of girls in an attempt to boost diversity in the tech industry.
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
          >
             
            The intelligence
            ...
          </Text>
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`lead one full width slice 1`] = `
<View>
  <View>
    <Text
      accessibilityRole="heading"
      accessible={true}
      allowFontScaling={true}
      aria-level="3"
      className=""
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#333333",
            "fontFamily": "TimesModern-Bold",
            "fontWeight": "400",
            "marginBottom": 5,
          },
          Object {
            "fontFamily": "TimesModern-Bold",
            "fontSize": 22,
            "lineHeight": 27,
          },
          Object {},
        ]
      }
    >
      Prince Philip ‘could be prosecuted’ over car crash
    </Text>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "blue",
        "marginBottom": 10,
        "width": "100%",
      }
    }
  >
    <View
      aspectRatio={1.7777777777777777}
      style={Object {}}
    >
      <View
        onLayout={[Function]}
        style={
          Array [
            Object {
              "flex": 1,
            },
            null,
          ]
        }
      >
        <View
          onLayout={[Function]}
          style={
            Array [
              Object {
                "flex": 1,
              },
              Object {
                "flex": 1,
              },
            ]
          }
        >
          <ARTSurfaceView
            style={
              Array [
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                Object {
                  "height": 0,
                  "width": 0,
                },
              ]
            }
          >
            <ARTShape
              d={
                Array [
                  2,
                  0,
                  0,
                  2,
                  0,
                  0,
                  2,
                  0,
                  0,
                  2,
                  0,
                  0,
                ]
              }
              fill={
                Array [
                  1,
                  0,
                  0,
                  -0,
                  0,
                  0.9764705882352941,
                  0.9764705882352941,
                  0.9764705882352941,
                  1,
                  0.9294117647058824,
                  0.9294117647058824,
                  0.9294117647058824,
                  1,
                  0,
                  1,
                ]
              }
              opacity={1}
              stroke={null}
              strokeCap={1}
              strokeDash={null}
              strokeJoin={1}
              strokeWidth={1}
              transform={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
            />
          </ARTSurfaceView>
        </View>
      </View>
      <Image
        onLoad={[Function]}
        source={
          Object {
            "uri": "https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F8c1333a8-1aa2-11e9-944c-54b267eb465b.jpg?crop=1556%2C875%2C189%2C119&resize=1440",
          }
        }
        style={
          Object {
            "height": "100%",
            "position": "absolute",
            "width": "100%",
            "zIndex": 1,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`primary tile 1`] = `
<View>
  <View>
    <Text
      accessibilityRole="heading"
      accessible={true}
      allowFontScaling={true}
      aria-level="3"
      className=""
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#333333",
            "fontFamily": "TimesModern-Bold",
            "fontWeight": "400",
            "marginBottom": 5,
          },
          Object {
            "fontFamily": "TimesModern-Bold",
            "fontSize": 22,
            "lineHeight": 27,
          },
          Object {},
        ]
      }
    >
      Prince Philip ‘could be prosecuted’ over car crash
    </Text>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "blue",
        "marginBottom": 10,
        "width": "100%",
      }
    }
  >
    <View
      aspectRatio={1.7777777777777777}
      style={Object {}}
    >
      <View
        onLayout={[Function]}
        style={
          Array [
            Object {
              "flex": 1,
            },
            null,
          ]
        }
      >
        <View
          onLayout={[Function]}
          style={
            Array [
              Object {
                "flex": 1,
              },
              Object {
                "flex": 1,
              },
            ]
          }
        >
          <ARTSurfaceView
            style={
              Array [
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                Object {
                  "height": 0,
                  "width": 0,
                },
              ]
            }
          >
            <ARTShape
              d={
                Array [
                  2,
                  0,
                  0,
                  2,
                  0,
                  0,
                  2,
                  0,
                  0,
                  2,
                  0,
                  0,
                ]
              }
              fill={
                Array [
                  1,
                  0,
                  0,
                  -0,
                  0,
                  0.9764705882352941,
                  0.9764705882352941,
                  0.9764705882352941,
                  1,
                  0.9294117647058824,
                  0.9294117647058824,
                  0.9294117647058824,
                  1,
                  0,
                  1,
                ]
              }
              opacity={1}
              stroke={null}
              strokeCap={1}
              strokeDash={null}
              strokeJoin={1}
              strokeWidth={1}
              transform={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
            />
          </ARTSurfaceView>
        </View>
      </View>
      <Image
        onLoad={[Function]}
        source={
          Object {
            "uri": "https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F8c1333a8-1aa2-11e9-944c-54b267eb465b.jpg?crop=1556%2C875%2C189%2C119&resize=1440",
          }
        }
        style={
          Object {
            "height": "100%",
            "position": "absolute",
            "width": "100%",
            "zIndex": 1,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`primary tiles without image 1`] = `
<View>
  <View>
    <Text
      accessibilityRole="heading"
      accessible={true}
      allowFontScaling={true}
      aria-level="3"
      className=""
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#333333",
            "fontFamily": "TimesModern-Bold",
            "fontWeight": "400",
            "marginBottom": 5,
          },
          Object {
            "fontFamily": "TimesModern-Bold",
            "fontSize": 22,
            "lineHeight": 27,
          },
          Object {},
        ]
      }
    >
      Prince Philip ‘could be prosecuted’ over car crash
    </Text>
  </View>
  <Text
    accessible={true}
    allowFontScaling={true}
    className=""
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#696969",
        "flexWrap": "wrap",
        "fontFamily": "TimesDigitalW04",
        "fontSize": 14,
        "lineHeight": 20,
        "marginBottom": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      
      The 
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        Duke of Edinburgh
      </Text>
       could be charged with driving without due care and attention after his car accident yesterday
      ...
    </Text>
  </Text>
</View>
`;
